2000-04-06  John Jannotti  <jj@lcs.mit.edu>

	* toc.el: Reorganized to reflect the ordering of documentation in
 	PROTOCOL
	(toc-evil): Added
	(toc-add-permits): Added
	(toc-add-denies): Added
	(toc-chat-evil): Added
	(toc-get-info): Added
	(toc-set-info): Added
	(toc-set-idle): Added

	
	* tnt.el (tnt-handle-error): Added catchall clause to notice weird
 	errors

2000-04-06  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-leave-chat): now using completing-read with
	the list of chats you're in (the cdrs from tnt-chat-alist)
	(tnt-online-buddies-collection): changed name from
	tnt-buddy-collection, so that it's clear that this gives just the
	buddies who are currently online.
	(tnt-send-text-as-chat-invitation): added (completion-ignore-case t)
	(tnt-send-text-as-chat-whisper): added (completion-ignore-case t)

	* README: added tnt-leave-chat info.

2000-04-06  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-inhibit-key-bindings): Added keybinding for
 	tnt-leave-chat.
	(tnt-show-help): Added help for tnt-leave-chat
	(tnt-chat-buffer-name): Made comment into docstring
	(tnt-chat-buffer): Made comment into docstring

	* toc.el (toc-chat-invite): Made the &rest parameter a normal
 	parameter so we wouldn't need to use apply when we have built a
 	list of buddies to invite.

	* tnt.el (tnt-join-chat): Better docstring
	(tnt-handle-chat-join): Tiny simplification
	(tnt-append-message): Significant interface change.  User now
	comes after message and is optional so if it is not needed it can
	be left out, not sent as nil.  More significantly, a new optional
	argument MODIFIED is used for the various parenthetical comments
	made about some messages, such as Auto-response, whispers,
	invites, etc.  This is so that the coloring mechanism gets to look 
	at the unadorned username.  Now when I whisper to someone in a
	chat room it will still be printed in my color.

2000-04-05  John Jannotti  <jj@lcs.mit.edu>
